fixed horizontal scrolling on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,7 @@ html {
 
 body {
   font-family: "Red Hat Display", sans-serif;
+  overflow-x: hidden;
 }
 
 p {
